3-terraform-azure/azure-firewall/rules.tf
# Deploy rules to Azure Firewall policy.
resource "azurerm_firewall_policy_rule_collection_group" "test-one" {
  name               = "azure-firewall-test-one-policy-rcg"
  firewall_policy_id = azurerm_firewall_policy.test-one.id
  priority           = 100

  application_rule_collection {
    name     = "Office_365"
    priority = 500
    action   = "Allow"
    rule {
      name = "outbound_to_office_365_v2"
      protocols {
        type = "Http"
        port = 80
      }
      protocols {
        type = "Https"
        port = 443
      }
      source_addresses = ["10.10.20.60/32"]
      # These FQDNs are obtained from the output of the PowerShell script in the /files directory.
      destination_fqdns = ["outlook.office.com", "outlook.office365.com", "smtp.office365.com", "r1.res.office365.com", "r3.res.office365.com", "r4.res.office365.com", "*.outlook.office.com", "outlook.office365.com", "*.outlook.office.com", "outlook.office365.com", "*.outlook.com", "attachments.office.net", "*.protection.outlook.com", "*.mail.protection.outlook.com", "*.lync.com", "*.teams.microsoft.com", "teams.microsoft.com", "*.broadcast.skype.com", "broadcast.skype.com", "*.sfbassets.com", " [...]
    }
  }

  network_rule_collection {
    name     = "network_rules_test"
    priority = 400
    action   = "Allow"
    rule {
      name                  = "outbound_example_only"
      protocols             = ["TCP", "UDP"]
      source_addresses      = ["*"]
      destination_addresses = ["192.168.1.1", "192.168.1.2"]
      destination_ports     = ["21", "22"]
    }
    rule {
      name                  = "outbound_to_azure"
      protocols             = ["TCP"]
      source_addresses      = ["*"]
      destination_addresses = ["AzureCloud"]
      destination_ports     = ["443"]
    }
  }
}
